<resources>
    <string name="app_name" translatable="false">FeedArticlesJetpack</string>
    <string name="feed_articles" translatable="false">Feed Articles</string>
    <string name="connect_yourself">Connect yourself</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="no_account_register">No account ? Register !</string>
    <string name="confirm_password">Confirmed password</string>
    <string name="new_account">New account</string>
    <string name="subscribe">Subscribe</string>
    <string name="all">All</string>
    <string name="sport">Sport</string>
    <string name="manga">Manga</string>
    <string name="others">Others</string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="new_article">New article</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="edit_article">Edit Article</string>
    <string name="image_url">Image URL</string>
    <string name="details_article">Details Article</string>
    <string name="created_on">Created on %s</string>
    <string name="category_s">Category : %s</string>
    <string name="mid_size_title" translatable="false">A middle sized title</string>
    <string name="large_size_description" translatable="false">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop "</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="menu_refresh">Refresh Menu\n</string>
    <string name="response_ok">Response OK</string>
    <string name="unauthorized">Unauthorized operation</string>
    <string name="error_param">error on parameter</string>
    <string name="error_connection_db">error with database connection</string>
    <string name="status_favorite_changed">favorite status has changed</string>
    <string name="status_favorite_not_changed">favorite status has not changed !</string>
    <string name="article_created">Article created</string>
    <string name="article_not_created">Article not created</string>
    <string name="empty_required_fields">Some fields required are empty</string>
    <string name="no_response_from_server">No response from server</string>
    <string name="article_modified">Article modified</string>
    <string name="article_not_modified">Article not modified</string>
    <string name="ids_are_different">Ids are different</string>
    <string name="article_deleted">Article deleted</string>
    <string name="article_not_deleted">Article not deleted</string>
    <string name="token_security_problem">Token has not changed (security problem)</string>
    <string name="ok_new_token_delivered">Authentication OK. New token</string>
    <string name="user_unknown">Unknown user</string>
    <string name="login_or_password_empty">Login or password empty</string>
    <string name="login_already_used">Login already used</string>
    <string name="new_account_created">New account created</string>
    <string name="new_account_not_created">New account not created</string>
    <string name="error_on_confirmed_password">Error on confirmed password</string>
</resources>