<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.article.EditArticleFragment">

    <TextView
        android:id="@+id/tv_edit_article_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_article"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/electric_blue"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_edit_article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLength="80"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_article_header"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_article_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_article_header"
        />

    <EditText
        android:id="@+id/et_edit_article_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:maxLines="8"
        android:hint="@string/content"
        android:gravity="top"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_article_title"
        app:layout_constraintStart_toStartOf="@+id/et_edit_article_title"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_article_title" />

    <EditText
        android:id="@+id/et_edit_article_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_url"

        android:textColorHint="@color/electric_blue"

        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_article_title"
        app:layout_constraintStart_toStartOf="@+id/et_edit_article_title"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_article_description" />

    <ImageView
        android:id="@+id/iv_edit_article"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/feedarticles_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_article_image_url" />

    <RadioGroup
        android:id="@+id/rg_edit_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_delete"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_article">

        <RadioButton
            android:id="@+id/rb_edit_art_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />

        <RadioButton
            android:id="@+id/rb_edit_art_manga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga" />

        <RadioButton
            android:id="@+id/rb_edit_art_divers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_edit_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/electric_blue"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_edit_delete" />

    <Button
        android:id="@+id/btn_edit_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/electric_blue"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toStartOf="@id/btn_edit_update"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>