<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.article.CreaArticleFragment">

    <TextView
        android:id="@+id/tv_crea_article_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_article"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/electric_blue"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_crea_article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLength="80"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tv_crea_article_header"
        app:layout_constraintStart_toStartOf="@+id/tv_crea_article_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_crea_article_header"
        />

    <EditText
        android:id="@+id/et_crea_article_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="6"
        android:maxLines="8"
        android:hint="@string/content"
        android:gravity="top"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_crea_article_title"
        app:layout_constraintStart_toStartOf="@+id/et_crea_article_title"
        app:layout_constraintTop_toBottomOf="@+id/et_crea_article_title" />

    <EditText
        android:id="@+id/et_crea_article_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_url"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_crea_article_title"
        app:layout_constraintStart_toStartOf="@+id/et_crea_article_title"
        app:layout_constraintTop_toBottomOf="@+id/et_crea_article_description" />

    <ImageView
        android:id="@+id/iv_crea_article"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:src="@drawable/feedarticles_logo"
        app:layout_constraintBottom_toTopOf="@+id/rg_crea_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_crea_article_image_url" />

    <RadioGroup
        android:id="@+id/rg_crea_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_crea_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <RadioButton
            android:id="@+id/rb_crea_art_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />

        <RadioButton
            android:id="@+id/rb_crea_art_manga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga" />

        <RadioButton
            android:id="@+id/rb_crea_art_divers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/others" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_crea_register"
        android:paddingVertical="10dp"
        android:paddingHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@color/electric_blue"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_crea_article_description"
        app:layout_constraintStart_toStartOf="@+id/et_crea_article_description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>