<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/electric_blue"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_register_enter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:maxEms="10"
        android:textStyle="bold"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="100dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_title"
        app:layout_constraintStart_toStartOf="@+id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        />

    <EditText
        android:id="@+id/et_register_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:maxEms="10"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColorHint="@color/electric_blue"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/et_register_enter_login"
        app:layout_constraintStart_toStartOf="@+id/et_register_enter_login"
        app:layout_constraintTop_toBottomOf="@+id/et_register_enter_login" />

    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxEms="10"
        android:textColorHint="@color/electric_blue"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/et_register_enter_login"
        app:layout_constraintStart_toStartOf="@+id/et_register_enter_login"
        app:layout_constraintTop_toBottomOf="@+id/et_register_enter_password" />

    <Button
        android:id="@+id/btn_register"
        android:paddingVertical="10dp"
        android:paddingHorizontal="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@color/electric_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_register_enter_password"
        app:layout_constraintStart_toStartOf="@+id/et_register_enter_password"
        app:layout_constraintTop_toBottomOf="@+id/et_register_enter_password" />


</androidx.constraintlayout.widget.ConstraintLayout>