<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.articles.MainFragment"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/ib_main_add_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@android:drawable/ic_input_add"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_main_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@android:drawable/btn_star"
        app:layout_constraintBottom_toBottomOf="@+id/ib_main_add_article"
        app:layout_constraintEnd_toStartOf="@+id/ib_main_logout"
        app:layout_constraintStart_toEndOf="@+id/ib_main_add_article"
        app:layout_constraintTop_toTopOf="@+id/ib_main_add_article" />


    <ImageButton
        android:id="@+id/ib_main_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_lock_power_off"
        app:layout_constraintBottom_toBottomOf="@+id/ib_main_add_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_main_add_article" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_articles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_main_add_article"
        app:layout_constraintBottom_toTopOf="@+id/rg_main"/>


    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_tous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all"
             />

        <RadioButton
            android:id="@+id/rb_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport"
             />

        <RadioButton
            android:id="@+id/rb_manga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga"
            />

        <RadioButton
            android:id="@+id/rb_divers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
             />



    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>