<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="3dp"
    android:focusable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_item_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/iv_item_view"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/feedarticles_logo" />

        <TextView
            android:id="@+id/tv_item_view_article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:maxEms="9"
            android:lines="1"
            android:maxLength="80"
            android:paddingHorizontal="5dp"
            android:text="@string/title"
            android:textColor="@color/electric_blue"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv_item_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_view_article_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:maxEms="17"
            android:lines="1"
            android:text="@string/description"
            android:textColor="@color/electric_blue"
            android:paddingHorizontal="5dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_item_view"
             />

        <TextView
            android:id="@+id/tv_item_view_article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="80"
            android:text="@string/date"
            android:textColor="@color/electric_blue"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_view_article_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_item_view_article_title"
            app:layout_constraintTop_toTopOf="@+id/tv_item_view_article_title" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>